// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HideOnScroll should render not onScroll HideOnScroll 1`] = `
<div>
  <div>
    basic HideOnScroll
  </div>
</div>
`;

exports[`HideOnScroll should render onScroll HideOnScroll 1`] = `
<div>
  <div
    style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
  >
    basic HideOnScroll
  </div>
</div>
`;
